# lemon-ai-mcp-server-demo-hotel

./: README.md
lemon-ai-mcp-server-demo-hotel-service/: .env  lemon.db  main.py  pyproject.toml
lemon-ai-mcp-server-demo-hotel-service/lemon_service/api/: ai_chat.py  hotel.py  user.py
lemon-ai-mcp-server-demo-hotel-service/lemon_service/base/: __init__.py  base_model.py  base_repository.py  base_schema.py
lemon-ai-mcp-server-demo-hotel-service/lemon_service/config/: db_config.py  server_config.py
lemon-ai-mcp-server-demo-hotel-service/lemon_service/core/: __init__.py  api.py  app.py  db_engine.py  setup_logger.py
lemon-ai-mcp-server-demo-hotel-service/lemon_service/decorator/: api.py
lemon-ai-mcp-server-demo-hotel-service/lemon_service/mcp_server/: __init__.py  hotel_tools.py
lemon-ai-mcp-server-demo-hotel-service/lemon_service/middleware/: auth.py  exception.py
lemon-ai-mcp-server-demo-hotel-service/lemon_service/model/: __init__.py  hotel.py  hotel_room.py  hotel_room_type.py  hotel_room_use_record.py  order.py  user.py  user_session.py
lemon-ai-mcp-server-demo-hotel-service/lemon_service/repository/: __init__.py  hotel.py  hotel_room.py  hotel_room_type.py  hotel_room_use_record.py  user.py  user_session.py
lemon-ai-mcp-server-demo-hotel-service/lemon_service/schema/: ai_chat.py  api.py  auth.py  hotel.py
lemon-ai-mcp-server-demo-hotel-service/lemon_service/service/: ai_chat.py  hotel.py  prompt.py  user.py
lemon-ai-mcp-server-demo-hotel-service/lemon_service/utils/: date.py
lemon-ai-mcp-server-demo-hotel-service/prompt/: system-prompt.md
(+38 files in other folders)
