[project]
name = "lemon-ai-mcp-server-demo-hotel-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.5.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "requests>=2.32.3",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
]
